// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getKeyrackKeySecrets.integration given: [case1] a key that was never configured (absent) when: [t0] getKeyrackKeySecrets is called for it then: it throws a ConstraintError — caller must act (absent or blocked) 1`] = `
{
  "message": "✋ ConstraintError: 
🔐 keyrack
   └─ ehmpathy.test.NONEXISTENT_KEY_FOR_TEST
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --owner ehmpathy --key NONEXISTENT_KEY_FOR_TEST --env test[0m


{
  "attempts": [
    {
      "key": "NONEXISTENT_KEY_FOR_TEST",
      "status": "absent",
      "fix": "rhx keyrack set --owner ehmpathy --key NONEXISTENT_KEY_FOR_TEST --env test"
    }
  ],
  "env": "test",
  "owner": "ehmpathy"
}",
  "metadata": {
    "attempts": [
      {
        "fix": "rhx keyrack set --owner ehmpathy --key NONEXISTENT_KEY_FOR_TEST --env test",
        "key": "NONEXISTENT_KEY_FOR_TEST",
        "status": "absent",
      },
    ],
    "env": "test",
    "owner": "ehmpathy",
  },
}
`;

exports[`getKeyrackKeySecrets.integration given: [case2] a configured key that is currently locked when: [t0] the key is relocked, then requested with unlock enabled then: result structure matches snapshot 1`] = `
{
  "keys": [
    "XAI_API_KEY",
  ],
}
`;

exports[`getKeyrackKeySecrets.integration given: [case3] multiple keys with mixed statuses (one granted, one locked) when: [t0] only one of the two keys is relocked, then both requested then: result structure matches snapshot 1`] = `
{
  "keys": [
    "OPENAI_API_KEY",
    "XAI_API_KEY",
  ],
}
`;
